@@ -19,6 +19,7 @@ zztong_bartertown_joelx,POI,POI,,x,Barter Town Joel,,,,,,,,,,,,,,
 zztong_bartertown_rektx,POI,POI,,x,Barter Town Rekt,,,,,,,,,,,,,,
 zztong_biowaste_dump_01,POI,POI,,x,Biowaste Dump,,,,,,,,,,,,,,
 zztong_brownstones_01,POI,POI,,x,Brownstone Apartments,,,,,,,,,,,,,,
+zztong_buried_treasure_02,POI,POI,,x,Magnetic Anomaly,,,,,,,,,,,,,,
 zztong_cabin_fort_01,POI,POI,,x,Cabin Fort,,,,,,,,,,,,,,
 zztong_car_show_01,POI,POI,,x,Car Show,,,,,,,,,,,,,,
 zztong_car_wash_01,POI,POI,,x,Kwik Kleen Car Wash,,,,,,,,,,,,,,
