@@ -24,7 +24,7 @@
   <property name="SleeperVolumeGroupId" value="0,0,0,0,0,0" />
   <property name="ShowQuestClearCount" value="1" />
   <property name="Tags" value="snow,desert,countryresidential,pine_forest" />
-  <property name="DuplicateRepeatDistance" value="2000" />
+  <property name="DuplicateRepeatDistance" value="1000" />
   <property name="POIMarkerSize" value="7, 13, 1" />
   <property name="POIMarkerStart" value="0, 3, 42" />
   <property name="POIMarkerGroup" value="driveway" />
