@@ -23,7 +23,7 @@
   <property name="SleeperVolumeFlags" value="0,0,0,0,0" />
   <property name="YOffset" value="-3" />
   <property name="Tags" value="snow,countryresidential,rural,pine_forest" />
-  <property name="DuplicateRepeatDistance" value="2000" />
+  <property name="DuplicateRepeatDistance" value="1000" />
   <property name="POIMarkerSize" value="5, 13, 1#4, 3, 4#5, 4, 1#5, 1, 5#1, 3, 1#5, 13, 3" />
   <property name="POIMarkerStart" value="19, 2, 42#27, 3, 37#14, 3, 3#25, 3, 26#23, 5, 24#19, 2, 42" />
   <property name="POIMarkerGroup" value="driveway,appliances,gas,camp,ladder,driveway" />
