@@ -14,7 +14,7 @@
   <property name="Zoning" value="none" />
   <property name="YOffset" value="-4" />
   <property name="Tags" value="residential" />
-  <property name="DuplicateRepeatDistance" value="2000" />
+  <property name="DuplicateRepeatDistance" value="1000" />
   <property name="POIMarkerSize" value="7, 13, 5#4, 3, 9#4, 3, 6#3, 4, 3#2, 2, 2#1, 2, 5" />
   <property name="POIMarkerStart" value="5, 3, -5#6, 4, 6#6, 4, 20#35, 4, 35#12, 4, 13#37, 4, 25" />
   <property name="POIMarkerGroup" value="driveway,ambulance,generator,sculpture,delivery,firewood" />
