@@ -22,7 +22,7 @@
   <property name="POIMarkerPartRotations" value="1,3,1,0,3,2" />
   <property name="POIMarkerPartSpawnChance" value="0.4,0.2,0.4,0.2,0.6,1" />
   <property name="Tags" value="residential" />
-  <property name="DuplicateRepeatDistance" value="2000" />
+  <property name="DuplicateRepeatDistance" value="1000" />
   <property name="SleeperVolumeSize" value="12, 4, 15#9, 3, 7#9, 6, 10#10, 3, 12" />
   <property name="SleeperVolumeStart" value="1, 3, 9#14, 4, 2#14, 7, 3#13, 4, 9" />
   <property name="SleeperVolumeGroupId" value="0,0,0,0" />
