@@ -29,7 +29,7 @@
   <property name="POIMarkerPartRotations" value="2,0,0,0,0,0" />
   <property name="POIMarkerPartSpawnChance" value="1,0.4,0.2,0.2,0.8,0.8" />
   <property name="Tags" value="residential" />
-  <property name="DuplicateRepeatDistance" value="2000" />
+  <property name="DuplicateRepeatDistance" value="1000" />
   <property name="SleeperVolumeTriggeredBy" value=" # # # # # " />
   <property class="Stats">
     <property name="TotalVertices" value="322677" />
