@@ -21,7 +21,7 @@
   <property name="POIMarkerPartRotations" value="2,2,0,0,0,2,0,3,0,1,3,0,2,2,2,2,0,0,2,1,0,0" />
   <property name="POIMarkerPartSpawnChance" value="1,1,1,0.8,0.6,0.2,0.4,0.6,0.6,0.4,1,0.8,0.8,0.8,0.8,0.8,0.2,0.2,0.2,0.2,0.2,0.2" />
   <property name="Tags" value="residential" />
-  <property name="DuplicateRepeatDistance" value="2000" />
+  <property name="DuplicateRepeatDistance" value="1000" />
   <property name="SleeperVolumeSize" value="17, 8, 11#8, 4, 14#13, 3, 8#19, 3, 8#8, 3, 15#8, 3, 8#12, 3, 18#13, 3, 18#7, 4, 11#7, 4, 12#7, 4, 12#7, 4, 11#12, 4, 24#7, 8, 22#7, 8, 22#14, 8, 22" />
   <property name="SleeperVolumeStart" value="6, 6, 32#23, 6, 37#31, 7, 44#25, 7, 28#45, 7, 28#45, 7, 44#38, 2, 31#25, 2, 31#24, 11, 28#24, 11, 40#45, 11, 40#45, 11, 28#32, 11, 28#24, 15, 29#45, 15, 29#31, 15, 29" />
   <property name="SleeperVolumeGroupId" value="0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0" />
