@@ -12,7 +12,7 @@
   <property name="PrefabSize" value="25, 17, 25" />
   <property name="RotationToFaceNorth" value="2" />
   <property name="Tags" value="wilderness,countryresidential,rural,gateway" />
-  <property name="DuplicateRepeatDistance" value="2000" />
+  <property name="DuplicateRepeatDistance" value="1000" />
   <property name="YOffset" value="-3" />
   <property name="POIMarkerSize" value="5, 13, 1#5, 1, 5#5, 13, 3#1, 2, 1#5, 5, 11#1, 4, 5#5, 2, 1#5, 13, 2" />
   <property name="POIMarkerStart" value="19, 2, -1#19, 2, -5#19, 2, -3#10, 6, 10#19, 3, 2#1, 3, 8#4, 3, 23#19, 2, -2" />
