@@ -29,7 +29,7 @@
   <property name="POIMarkerPartSpawnChance" value="1,0.4,0.4,0.4" />
   <property name="YOffset" value="-3" />
   <property name="Tags" value="countryresidential" />
-  <property name="DuplicateRepeatDistance" value="2000" />
+  <property name="DuplicateRepeatDistance" value="1000" />
   <property name="SleeperVolumeTriggeredBy" value=" # # " />
   <property class="Stats">
     <property name="TotalVertices" value="267277" />
